tests/NormalTests/paczka1/fuzzy1/14212588.err
Error in line 2: A0rj S931 88,8
Error in line 10: Bj9uKI4JHl A682 80,2
Error in line 26: A682 S562 27,9
Error in line 25: A0rj A644 54,3
Error in line 38: A0rj A682 66,5
